refactoring to run app with java 1.8 instead of 11 to run on different devices without recompiling